[gd_scene load_steps=10 format=3 uid="uid://br51u0mbgijdq"]

[ext_resource type="Theme" uid="uid://cdkyr7bjnqey5" path="res://Themes/FinancesPanel.tres" id="1_k2mrb"]
[ext_resource type="FontVariation" uid="uid://duivi6c74ae1p" path="res://new_font_variation.tres" id="2_8ljse"]
[ext_resource type="Script" path="res://_Scripts/Finances.gd" id="2_dj8k2"]
[ext_resource type="Texture2D" uid="uid://dejm0xb0oh7jl" path="res://Assets/UI/MainPanels.png" id="2_ye7cy"]
[ext_resource type="Texture2D" uid="uid://cakcquumm7qgm" path="res://Assets/UI/InnerPanels.png" id="5_rgnwv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jgjrj"]
texture = ExtResource("2_ye7cy")
texture_margin_left = 30.0
texture_margin_top = 31.0
texture_margin_right = 30.0
texture_margin_bottom = 31.0
region_rect = Rect2(550, 141, 377, 370)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1yx43"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w5p8n"]
texture = ExtResource("5_rgnwv")
texture_margin_left = 18.0
texture_margin_top = 18.0
texture_margin_right = 18.0
texture_margin_bottom = 17.0
region_rect = Rect2(25, 40, 236, 176)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g21av"]

[node name="Finances" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 184.0
offset_top = 129.0
offset_right = -168.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k2mrb")
theme_override_styles/panel = SubResource("StyleBoxTexture_jgjrj")
script = ExtResource("2_dj8k2")
metadata/_edit_horizontal_guides_ = [-34.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1yx43")

[node name="Label" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_8ljse")
theme_override_font_sizes/normal_font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_w5p8n")
bbcode_enabled = true
text = "[center]Daily Income"

[node name="Panel2" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_g21av")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel2"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DailyIncomeContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel2/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="ExpensesDisplay" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Details" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ExpensesDisplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
